Revision history for Perl extension File::MimeInfo.
Versions up to 0.15 by Jaap Karssenberg <pardus@cpan.org>
Versions starting 0.16 by Michiel Beijen <michiel.beijen@gmail.com>

0.27  2015-02-23
 - Misspelled NoDisplay attribute in .desktop file.
   Fix by Bernhard Rosenkraenzer (berolinux)
 - Fix typos in README by Sean Smith (ncstang) as part of CPAN Pull Request
    Challenge February 2015.

0.26  2014-05-11
 - Fix mimeinfo not adhering to the priorization of globs -
    kudos Stefan Seifert.
 - Fixed URL in POD. Only run POD 404 tests with extended testing.

0.25  2014-04-03
 - Included new test file in MANIFEST.

0.24  2014-04-02
 - Fixed freedesktop.org desktop-file-utils URL - David Steinbrunner.

0.23  2014-04-02
 - Fixed opening of files with '+' in mime type using
   File::MimeInfo::Applications.
   Debian bug 690334, brian m. carlson.

0.22  2014-02-27
 - Fixed Double-close on a filehandle issue (RT 93221) - Christian Ludwig.
 - Fixed cpantesters issue with old version of CPAN::Changes

0.21  2013-11-03
 - fixed typo in mimeopen manpage
    (RT 90005) - Jonathan Dowland, Debian.

0.20  2013-10-09
 - mimetype, mimeopen should be set as executable files
    (RT 89328) - Jitka Plesnikova, Red Hat.

0.19  2013-10-05
 - Changed to EU::MM.
 - Typo fixes - David Steinbrunner.

0.18  2013-09-02
 - Fixed RT#87631 - rights on File::MimeInfo::Magic not correct.

0.17  2013-06-06
 - Fixed tests on perl 5.18 (RT 85383) - Gregor Herrman
 - Fixed typos (RT 85634) - Gregor Herrman

0.16  2012-01-03
 - Fixed test suite for perl 5.13 and newer (RT 66841) - Kent Fredric
 - Fixed typos in documentation (RT 70171, 39974) - Gregor Herrman
 - Fixed bug for files named "0" (RT 41031)
 - Cleaned up mimetype script (RT 64421)
 - Removed unessecary error code (RT 66527)
 - Removed illogical behavior for derefereencing symlinks (RT 58575)

0.15  2008-02-13
 A special thanks to Chapman Flack for bug reports and patches.